--- a/evento-master/app/build.gradle
+++ b/evento-master/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.fireblaze.evento"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 2
         versionName "1.1"
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.zxing:core:3.2.1'
     implementation 'me.dm7.barcodescanner:zxing:1.8.4'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.braintreepayments:card-form:3.1.1'
 
 
 
